[package]
name = "wput"
version = "0.0.1"
edition = "2021"
rust-version = "1.64"
authors = ["bob <me@nagexiucai.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RustMotto/wput"
homepage = "https://github.com/RustMotto/wput"
documentation = "https://github.com/RustMotto/wput"
description = """
Another http/https upload tool.
"""
categories = ["command-line-utilities", "web-programming::http-client"]
keywords = ["upload", "http", "https"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.2.4", features = ["derive"] }
hyper = { features = ["full"] }
